# 01-adder

./: .ghci  .gitignore  Makefile  README.md  adder.cabal  stack.yaml
lib/Language/Adder/: Asm.hs  Compiler.hs
tests/: Common.hs  GradeScope.hs  Test.hs  yourTests.json
tests/input/: addLet.adder  complex.adder  diffVars.adder  moreComplex.adder  simple.adder  simpleAdd.adder
